--- a/frontend/src/app/shared/line-chart.component.html
+++ b/frontend/src/app/shared/line-chart.component.html
@@ -1,5 +1,8 @@
 ﻿<div class="chart-card">
-  <div class="chart-title">{{ title }}</div>
+  <div class="chart-title">
+  <span>{{ title }}</span>
+  <span *ngIf="info" class="info-icon" [title]="info">?</span>
+</div>
   <div class="chart-canvas">
     <canvas #canvas></canvas>
   </div>
